--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,114 @@
 /* Colores */
 
 /* ******************************** */
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#container {
+  width: 393px;
+  height: 852px;
+  background: linear-gradient(192deg, #D59DFE 0%, #E8C9FF 100%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 82px;
+  padding: 70px 62px 105px 61px;
+
+}
+
+header {
+  display: flex;
+  width: 218px;
+  height: 107px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 19px;
+}
+
+.titulo {
+  color: #FFF;
+  font-family: JetBrains Mono;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 8.16px;
+}
+
+.borde-circulo {
+  width: 270px;
+  height: 270px;
+  flex-shrink: 0;
+  border-radius: 270px;
+  border: 4px solid #BA5CFF;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+p{
+  color: #FFF;
+font-family: JetBrains Mono;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+/* Con after creamos un circulo pequeño dentro de este */
+.borde-circulo::after{
+  content: "";
+  width: 30px;
+  height: 30px;
+  background: #BA5CFF;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+@keyframes scaleAnimation {
+  0%, 100% {
+    transform: scale(1);
+  }
+  25%, 75% {
+    transform: scale(8.8);
+  }
+  50% {
+    transform: scale(8.8);
+  }
+}
+
+.borde-circulo.start-animation::after {
+  animation: scaleAnimation 15s linear infinite;
+}
+
+h2{
+  color: #FFF;
+font-family: JetBrains Mono;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.info{
+  color: #FFF;
+font-family: JetBrains Mono;
+font-size: 15px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+width: 323px;
+margin-top: 40px;
+}
